--- a/templates/metronome/generate.html
+++ b/templates/metronome/generate.html
@@ -2,6 +2,7 @@
 
 {% block content %}
     <form method="POST">
+        {% csrf_token %}
         {{ creation_form.frequency.label }}<br>
         {{ creation_form.frequency }}<br>
         {{ creation_form.duration.label }}<br>
